# carte-grise-ocr

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.db
alembic/: env.py
app/: database.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: extraction.py  health.py
app/core/: celery_app.py  config.py  security.py
app/models/: document.py  user.py
app/schemas/: car_plate_fr.py  car_plate_tn.py  common.py
app/services/: image_processing.py  validation.py
app/services/ai/: mistral_client.py  prompts.py
app/worker/: tasks.py
docker/: Dockerfile.api  Dockerfile.worker
tests/: test_api.py
